--- a/docker-projects/rentzone/Dockerfile-version1
+++ b/docker-projects/rentzone/Dockerfile-version1
@@ -4,7 +4,7 @@ FROM amazonlinux:latest
 # Update all installed packages to thier latest versions
 RUN yum update -y 
 
-# Install the unzip package, which we will use it to extract files from zip folder
+# Install the unzip package, which we will use it to extract files from the zip folder
 RUN yum install unzip -y
 
 # Install wget package, which we will use it to download files from the internet 
@@ -51,16 +51,16 @@ WORKDIR /var/www/html
 RUN yum install -y git
 
 # Clone the GitHub repository
-RUN git clone https://"<personal-access-token>"@github.com/"github_username"/"repository_name".git 
+RUN git clone https://"your_personal_access_token"@github.com/"your_github_username"/"your_repository_name".git 
 
 # Unzip the zip folder containing the web files
-RUN unzip "repository_name"/"web_file_zip" -d "repository_name"/
+RUN unzip "your_repository_name"/"web_file_zip" -d "your_repository_name"/
 
 # Copy the web files into the HTML directory
-RUN cp -av "repository_name"/"web_file_unzip"/. /var/www/html
+RUN cp -av "your_repository_name"/"web_file_unzip"/. /var/www/html
 
 # Remove the repository we cloned
-RUN rm -rf "repository_name"
+RUN rm -rf "your_repository_name"
 
 # Enable the mod_rewrite setting in the httpd.conf file
 RUN sed -i '/<Directory "\/var\/www\/html">/,/<\/Directory>/ s/AllowOverride None/AllowOverride All/' /etc/httpd/conf/httpd.conf
@@ -75,19 +75,19 @@ RUN chmod -R 777 storage/
 RUN sed -i '/^APP_ENV=/ s/=.*$/=production/' .env
 
 # Use the sed command to search the .env file for a line that starts with APP_URL= and replace everything after the = character
-RUN sed -i '/^APP_URL=/ s/=.*$/=https:\/\/"domain_name"\//' .env
+RUN sed -i '/^APP_URL=/ s/=.*$/=https:\/\/"your_domain_name"\//' .env
 
 # Use the sed command to search the .env file for a line that starts with DB_HOST= and replace everything after the = character
-RUN sed -i '/^DB_HOST=/ s/=.*$/="rds_endpoint"/' .env
+RUN sed -i '/^DB_HOST=/ s/=.*$/="your_rds_endpoint"/' .env
 
 # Use the sed command to search the .env file for a line that starts with DB_DATABASE= and replace everything after the = character
-RUN sed -i '/^DB_DATABASE=/ s/=.*$/="rds_db_name"/' .env
+RUN sed -i '/^DB_DATABASE=/ s/=.*$/="your_rds_db_name"/' .env
 
 # Use the sed command to search the .env file for a line that starts with DB_USERNAME= and replace everything after the = character
-RUN sed -i '/^DB_USERNAME=/ s/=.*$/="rds_master_username"/' .env
+RUN sed -i '/^DB_USERNAME=/ s/=.*$/="your_rds_master_username"/' .env
 
 # Use the sed command to search the .env file for a line that starts with DB_PASSWORD= and replace everything after the = character
-RUN sed -i '/^DB_PASSWORD=/ s/=.*$/="rds_db_password"/' .env
+RUN sed -i '/^DB_PASSWORD=/ s/=.*$/="your_rds_db_password"/' .env
 
 # Copy the file, AppServiceProvider.php from the host file system into the container at the path app/Providers/AppServiceProvider.php
 COPY AppServiceProvider.php app/Providers/AppServiceProvider.php
