--- a/docker-projects/rentzone/Dockerfile-version1
+++ b/docker-projects/rentzone/Dockerfile-version1
@@ -4,7 +4,7 @@ FROM amazonlinux:latest
 # Update all installed packages to thier latest versions
 RUN yum update -y 
 
-# Install the unzip package, which we will use it to extract files from the zip folder
+# Install the unzip package, which we will use it to extract the web files from the zip folder
 RUN yum install unzip -y
 
 # Install wget package, which we will use it to download files from the internet 
