--- a/docker-projects/rentzone/Dockerfile-version2
+++ b/docker-projects/rentzone/Dockerfile-version2
@@ -13,24 +13,24 @@ RUN yum install -y wget
 # Install Apache
 RUN yum install -y httpd
 
-# Install PHP and various extensions
-RUN amazon-linux-extras enable php7.4 && \
-  yum clean metadata && \
+## Install PHP 8 along with several necessary extensions for the application to run
+# Enable Amazon Linux Extras repository to get PHP 8.x
+RUN amazon-linux-extras enable php8.0 && \
+  yum install -y php && \ 
   yum install -y \
-    php \
-    php-common \
-    php-pear \
-    php-cgi \
-    php-curl \
-    php-mbstring \
-    php-gd \
-    php-mysqlnd \
-    php-gettext \
-    php-json \
-    php-xml \
+    php-cli \
     php-fpm \
-    php-intl \
-    php-zip
+    php-mysqlnd \
+    php-bcmath \
+    php-ctype \
+    php-fileinfo \
+    php-json \
+    php-mbstring \
+    php-openssl \
+    php-pdo \
+    php-gd \
+    php-tokenizer \
+    php-xml
 
 # Download the MySQL repository package
 RUN wget https://repo.mysql.com/mysql80-community-release-el7-3.noarch.rpm
@@ -59,11 +59,11 @@ ARG WEB_FILE_UNZIP
 ARG DOMAIN_NAME
 ARG RDS_ENDPOINT
 ARG RDS_DB_NAME
-ARG RDS_MASTER_USERNAME
+ARG RDS_DB_USERNAME
 ARG RDS_DB_PASSWORD
 
 # Use the build argument to set environment variables 
-ENV PERSONAL_ACCESS_TOKEN=$PERSONAL_ACCESS_TOKEN
+ENV PERSONAL_ACCESS_TOKEN=$PERSONAL_ACCESS_TOKEN 
 ENV GITHUB_USERNAME=$GITHUB_USERNAME
 ENV REPOSITORY_NAME=$REPOSITORY_NAME
 ENV WEB_FILE_ZIP=$WEB_FILE_ZIP
@@ -71,20 +71,20 @@ ENV WEB_FILE_UNZIP=$WEB_FILE_UNZIP
 ENV DOMAIN_NAME=$DOMAIN_NAME
 ENV RDS_ENDPOINT=$RDS_ENDPOINT
 ENV RDS_DB_NAME=$RDS_DB_NAME
-ENV RDS_MASTER_USERNAME=$RDS_MASTER_USERNAME
+ENV RDS_DB_USERNAME=$RDS_DB_USERNAME
 ENV RDS_DB_PASSWORD=$RDS_DB_PASSWORD
 
 # Clone the GitHub repository
-RUN git clone https://$PERSONAL_ACCESS_TOKEN@github.com/$GITHUB_USERNAME/$REPOSITORY_NAME.git
+RUN git clone https://${PERSONAL_ACCESS_TOKEN}@github.com/${GITHUB_USERNAME}/${REPOSITORY_NAME}.git
 
 # Unzip the zip folder containing the web files
-RUN unzip $REPOSITORY_NAME/$WEB_FILE_ZIP -d $REPOSITORY_NAME/
+RUN unzip ${REPOSITORY_NAME}/${WEB_FILE_ZIP} -d ${REPOSITORY_NAME}/
 
 # Copy the web files into the HTML directory
-RUN cp -av $REPOSITORY_NAME/$WEB_FILE_UNZIP/. /var/www/html
+RUN cp -av ${REPOSITORY_NAME}/${WEB_FILE_UNZIP}/. /var/www/html
 
 # Remove the repository we cloned
-RUN rm -rf $REPOSITORY_NAME
+RUN rm -rf ${REPOSITORY_NAME}
 
 # Enable the mod_rewrite setting in the httpd.conf file
 RUN sed -i '/<Directory "\/var\/www\/html">/,/<\/Directory>/ s/AllowOverride None/AllowOverride All/' /etc/httpd/conf/httpd.conf
@@ -99,19 +99,22 @@ RUN chmod -R 777 storage/
 RUN sed -i '/^APP_ENV=/ s/=.*$/=production/' .env
 
 # Use the sed command to search the .env file for a line that starts with APP_URL= and replace everything after the = character
-RUN sed -i "/^APP_URL=/ s/=.*$/=https:\/\/$DOMAIN_NAME\//" .env
+RUN sed -i "/^APP_URL=/ s/=.*$/=https:\/\/${DOMAIN_NAME}\//" .env
 
 # Use the sed command to search the .env file for a line that starts with DB_HOST= and replace everything after the = character
-RUN sed -i "/^DB_HOST=/ s/=.*$/=$RDS_ENDPOINT/" .env
+RUN sed -i "/^DB_HOST=/ s/=.*$/=${RDS_ENDPOINT}/" .env
 
 # Use the sed command to search the .env file for a line that starts with DB_DATABASE= and replace everything after the = character
-RUN sed -i "/^DB_DATABASE=/ s/=.*$/=$RDS_DB_NAME/" .env 
+RUN sed -i "/^DB_DATABASE=/ s/=.*$/=${RDS_DB_NAME}/" .env
 
 # Use the sed command to search the .env file for a line that starts with DB_USERNAME= and replace everything after the = character
-RUN  sed -i "/^DB_USERNAME=/ s/=.*$/=$RDS_MASTER_USERNAME/" .env
+RUN  sed -i "/^DB_USERNAME=/ s/=.*$/=${RDS_DB_USERNAME}/" .env
 
 # Use the sed command to search the .env file for a line that starts with DB_PASSWORD= and replace everything after the = character
-RUN  sed -i "/^DB_PASSWORD=/ s/=.*$/=$RDS_DB_PASSWORD/" .env
+RUN  sed -i "/^DB_PASSWORD=/ s/=.*$/=${RDS_DB_PASSWORD}/" .env
+
+# Print the .env file to review values
+RUN cat .env
 
 # Copy the file, AppServiceProvider.php from the host file system into the container at the path app/Providers/AppServiceProvider.php
 COPY AppServiceProvider.php app/Providers/AppServiceProvider.php
